--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "query-string": "^7.1.0",
+    "redis": "2.8.0",
     "swagger-ui-express": "^4.3.0"
   },
   "scripts": {
