--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "axios": "^0.25.0",
     "body-parser": "^1.19.1",
+    "buffer": "^6.0.3",
     "cheerio": "^1.0.0-rc.10",
     "express": "^4.17.2",
     "form-data": "^4.0.0",
     "lodash": "^4.17.21",
     "m3u8stream": "^0.8.6",
     "morgan": "^1.10.0",
+    "nodejs-base64-converter": "^1.0.5",
     "nodemon": "^2.0.15",
     "query-string": "^7.1.0",
     "redis": "2.8.0",
